--- a/src/components/AboutIEI/Carousel.module.css
+++ b/src/components/AboutIEI/Carousel.module.css
@@ -1,11 +1,11 @@
 .Root {
     width: 100%;
     height: 100%;
-    background-color: red;
+    /* background-color: red; */
     position: relative;
     overflow: hidden;
-    width: 400px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
 }
 
 .Container{
@@ -27,9 +27,9 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    background-color: yellow;
-    color: blue;
-    font-size: 2.5rem;
+    background-color: transparent;
+    color: whitesmoke;
+    font-size: 1.5rem;
     border-width: 0;
     cursor: pointer;
     z-index: 10;
