--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,53 @@
     justify-content: center;
     align-items: center;
 }
+
+.animation {
+    display: block;
+    position: relative;
+	z-index: 10;
+}
+
+.animation_layer {
+	background-position: center;
+	background-size: cover;
+	background-repeat: repeat-x;
+    min-height: 100vh;
+	width: 100%;
+	position: absolute;
+}
+.animation_layer.parallax {
+	position: fixed;
+}
+
+#auroraB {
+    background-image: url(./assets/AuroraB.png);
+}
+
+#front6 {
+    background-image: url(./assets/front6.png);
+}
+
+#front5 {
+    background-image: url(./assets/front5.png);
+}
+
+#front4 {
+    background-image: url(./assets/front4.png);
+}
+
+#front3 {
+    background-image: url(./assets/front3.png);
+}
+
+#front2 {
+    background-image: url(./assets/front2.png);
+}
+
+#front1 {
+    background-image: url(./assets/front1.png);
+}
+
+#treesF {
+    background-image: url(./assets/TreesF.png);
+}
