--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,7 +1,7 @@
 .landingPage {
   min-height: 100vh;
   width: 100%;
-  background-image: url('../../assets/LandingPageTest.png');
+  /* background-image: url('../../assets/LandingPageTest.png'); */
   background-size: cover;
   background-position: center;
 }
