--- a/src/components/Sponsors/Sponsors.css
+++ b/src/components/Sponsors/Sponsors.css
@@ -1,5 +1,5 @@
 .sponsors {
-  min-height: 100vh;
+  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -25,4 +25,25 @@
   background: #a2229d50;
   margin: 0 20px;
   border-radius: 50%;
+}
+
+#yoode{
+  background-image: url(../../assets/yoode.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#skill-vertex{
+  background-image: url(../../assets/skill-vertex.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#orom{
+  background-image: url(../../assets/orom.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
