--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -1,6 +1,11 @@
 .timeline {
   min-height: 100vh;
   width: 100%;
+  min-height: 100vh;
+  width: 100%;
+  background-image: url('../../assets/timeline.png');
+  background-size: cover;
+  background-position: center;
 }
 
 .title-timeline {
