--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 }
 
 #front6 {
-    background-image: url(./assets/front6.png);
+    background-image: url(./assets/front6new.png);
 }
 
 #front5 {
@@ -40,7 +40,7 @@
 }
 
 #front3 {
-    background-image: url(./assets/front3.png);
+    background-image: url(./assets/front3new.png);
 }
 
 #front2 {
@@ -48,7 +48,7 @@
 }
 
 #front1 {
-    background-image: url(./assets/front1.png);
+    background-image: url(./assets/front1new.png);
 }
 
 #treesF {
