--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
+
 /* SCROLL BAR */
 
 ::-webkit-scrollbar {
@@ -12,7 +14,9 @@
 
 body {
   margin: 0;
-  font-family: "Inter", sans-serif;
+  font-family: "Lato", sans-serif;
+  letter-spacing: 0.2em;
+  line-height: 1.5;
   background-color: var(--navy);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
