--- a/src/components/Prizes/Prizes.css
+++ b/src/components/Prizes/Prizes.css
@@ -1,5 +1,5 @@
 .prizes {
-  min-height: 100vh;
+  min-height: 85vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -12,34 +12,47 @@
   font-size: 4rem;
   }
 
-.medals{
+.big-prizes, .small-prizes{
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
 }
 
-.second {
-  width: 15vw;
-  height: 15vw;
-  margin: 0 20px;
-  border-radius: 50%;
-  background: #888f91;
-  background-image: url('../../assets/SECOND.png');
+.gap{
+  height: 10vh;
 }
 
-.first {
-  width: 15vw;
-  height: 15vw;
-  margin: 0 20px;
-  border-radius: 50%;
-  background: #ac6814;
+img{
+  margin-bottom: 5px;
 }
 
-.third {
+.first, .second, .third {
   width: 15vw;
   height: 15vw;
   margin: 0 20px;
   border-radius: 50%;
-  background: #a1441250;
+  background: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--cream);
+  font-size: xx-large;
+}
+
+.uiux, .pitch, .freshers {
+  width: 15vw;
+  height: 15vw;
+  margin: 0 20px;
+  border-radius: 50%;
+  background: transparent;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: var(--cream);
+  font-size: x-large;
 }
