--- a/src/components/Speakers/Speakers.css
+++ b/src/components/Speakers/Speakers.css
@@ -3,6 +3,8 @@
   width: 100%;
   padding-left: 50px;
   padding-right: 50px;
+  /* background-image: url(/src/assets/lightsbg.png);
+  background-size: contain; */
 }
 
 .title-speakers {
