--- a/src/components/Prizes/Prizes.css
+++ b/src/components/Prizes/Prizes.css
@@ -1,5 +1,5 @@
 .prizes {
-  min-height: 85gitvh;
+  min-height: 85vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -10,6 +10,7 @@
   color: var(--lightblue);
   text-align: center;
   font-size: 4rem;
+  font-family: 'Rubik Mono One', sans-serif;
   }
 
 .big-prizes, .small-prizes{
@@ -17,6 +18,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  padding-top: 5vh;
 }
 
 .gap{
@@ -24,7 +26,7 @@
 }
 
 img{
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 .first, .second, .third {
@@ -40,6 +42,7 @@ img{
   text-align: center;
   color: var(--cream);
   font-size: xx-large;
+  line-height: 1.25;
 }
 
 .uiux, .pitch, .freshers {
@@ -55,4 +58,11 @@ img{
   text-align: center;
   color: var(--cream);
   font-size: x-large;
+  line-height: 1.25;
+}
+
+@media screen and (max-width: 426px) {
+  .first, .second, .third {
+    font-size: small; /* Adjust the font size as needed */
+  }
 }
