--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -12,3 +12,11 @@
   text-align: center;
   font-size: 4rem;
   }
+
+  @media screen and (max-width: 426px) {
+    .timeline {
+      min-height: 90vh;
+      background-image: url('../../assets/timelinevert.png');
+      background-size: contain;
+    }
+  }
