--- a/src/components/AboutIEI/AboutIEI.css
+++ b/src/components/AboutIEI/AboutIEI.css
@@ -1,5 +1,5 @@
 .aboutIEI {
-  min-height: 80vh;
+  min-height: 100vh;
   width: 100%;
 
 }
@@ -31,13 +31,17 @@
 }
 
 @media screen and (max-width: 426px) {
+  .aboutIEI {
+    min-height: 115vh;
+  }
+
   .title-about-iei {
-    font-size: 3rem; /* Adjust the font size as needed */
+    font-size: 275%;
   }
 
   .content-about-iei {
-    font-size: 0.8rem; /* Adjust the font size as needed */
-    padding-left: 25px;
-    padding-right: 25px;
+    font-size: 0.7rem;
+    padding-left: 12px;
+    padding-right: 2px;
   }
 }
