--- a/src/components/AboutIllumina/AboutIllumina.css
+++ b/src/components/AboutIllumina/AboutIllumina.css
@@ -1,5 +1,5 @@
 .aboutIllumina {
-  min-height: 80vh;
+  min-height: 100vh;
   width: 100%;
 }
 
@@ -27,13 +27,17 @@
 }
 
 @media screen and (max-width: 426px) {
+  .aboutIllumina {
+    min-height: 115vh;
+  }
+
   .title-about-illumina {
-    font-size: 3rem; /* Adjust the font size as needed */
+    font-size: 275%;
   }
 
   .content-about-illumina {
-    font-size: 0.9rem; /* Adjust the font size as needed */
-    padding-left: 25px;
-    padding-right: 25px;
+    font-size: 0.7rem;
+    padding-left: 12px;
+    padding-right: 12px;
   }
 }
