--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -11,3 +11,10 @@
     text-align: center;
   }
 
+/* MEDIA SCREEN */
+@media only screen and (max-width: 468px) { 
+  .title-landing {
+    font-size: small;
+  }
+}
+
