--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    text-align: right; /* Right-align the navbar */
+    text-align: right;
     background-color: black;
 }
 
@@ -11,9 +11,20 @@ li {
 }
 
 li a {
-    display: inline-block; /* Change display property to inline-block */
+    display: inline-block;
     color: #F3F9F9;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+}
+
+@media only screen and (max-width: 468px) {  
+    ul {
+        font-size: 0px;
+        background-color: transparent;
+    }
+
+    li a {
+        padding: 14px 11px;
+    }
 }
