--- a/src/components/Sponsors/Sponsors.css
+++ b/src/components/Sponsors/Sponsors.css
@@ -1,5 +1,5 @@
 .sponsors {
-  min-height: 70vh;
+  min-height: 80vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -59,3 +59,69 @@
   background-position: center;
 }
 
+
+/* MEDIA SCREEN */
+
+@media only screen and (max-width: 468px) {
+  .sponsors {
+    min-height: 40vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
+  }
+  
+  .title-sponsors {
+    color: var(--lightblue);
+    text-align: center;
+    /*font-size: 3.25rem;*/
+    font-size: 275%;
+    }
+  
+  .sponsor-cards{
+    display: grid;
+    grid-template-columns: 150px 150px;
+    column-gap: 5vw;
+    row-gap: 10vw;
+    height: 30vh; /* To adjust the position of the cards on the section */
+  }
+  
+  .sponsor-tilt {
+    width: 30vw;
+    height: 30vw;
+    background: #a2229d50;
+    margin: 0px 0px 5px 25px;
+    border-radius: 50%;
+    border: 1px solid rgba(255, 255, 255, 0.14);
+    box-shadow: 0 0 20px 5px rgba(255, 255, 255, 0.8);
+  }
+  
+  #yoode{
+    background-image: url(../../assets/yoode.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  
+  #skill-vertex{
+    background-image: url(../../assets/skill-vertex.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  
+  #orom{
+    background-image: url(../../assets/orom.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+  
+  #aromas{
+    background-image: url(../../assets/aromas.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
