--- a/src/components/Timeline/Timeline.css
+++ b/src/components/Timeline/Timeline.css
@@ -1,8 +1,8 @@
 .timeline {
-  min-height: 80vh;
+  min-height: 90vh;
   width: 100%;
   background-image: url('../../assets/timelinealt.png');
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -15,8 +15,12 @@
 
   @media screen and (max-width: 426px) {
     .timeline {
-      min-height: 90vh;
-      background-image: url('../../assets/timelinevert.png');
-      background-size: contain;
+      min-height: 115vh;
+      background-image: url(../../assets/timelinevert.png);
+      background-size: 150vw;
+    }
+
+    .title-timeline{
+      font-size: 275%;
     }
   }
