--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 	background-position: center;
 	background-size: cover;
 	background-repeat: repeat-x;
-    min-height: 115vh;
+    min-height: 110vh;
 	width: 100%;
 	position: absolute;
 }
@@ -65,7 +65,13 @@
     align-items: center;
     justify-content: center;
     text-align: center;
+    z-index: 999;
+    
 }
+.title-scroll {
+    max-height: 1000vh;
+    overflow-y: auto;
+  }
 
 #title-text {
     font-size: 7rem;
@@ -102,5 +108,8 @@
 @media only screen and (max-width: 468px) { 
     #title-text{
         font-size: 17vw;
+    }
+    .animation_layer {
+        background-color: aqua;
     }
   }
