--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,13 +1,23 @@
-ul {
+.NavBar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
+  }
+  ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     text-align: right;
-    background-color: black;
+    background-color: transparent;
+    z-index: 5;
 }
 
 li {
     display: inline;
+    cursor: pointer;
+    z-index: 5;
 }
 
 li a {
