--- a/src/components/Speakers/Speakers.css
+++ b/src/components/Speakers/Speakers.css
@@ -50,7 +50,7 @@
 
 @media only screen and (max-width: 468px) {  
   .speakers {
-    min-height: 80vh;
+    min-height: 110vh;
   }
 
   .title-speakers {
@@ -75,5 +75,6 @@
     margin: 0px ;
     border-radius: 10px;
     border: 1px solid rgba(255,255,255,0.14);
+    margin-bottom: 40px;
   }
 }
