--- a/src/components/Sponsors/CountdownTimer.css
+++ b/src/components/Sponsors/CountdownTimer.css
@@ -2,3 +2,9 @@
     font-size: 3rem;
     color: var(--violet);
 }
+
+@media only screen and (max-width: 468px) {
+    .title-countdown, .timer {
+        font-size: 2rem;
+    }
+}
