--- a/src/components/Sponsors/Sponsors.css
+++ b/src/components/Sponsors/Sponsors.css
@@ -23,6 +23,7 @@
   justify-content: center;
   gap: 2vw;
   height: 40vh; /* To adjust the position of the cards on the section */
+  cursor: pointer;
 }
 
 .sponsor-tilt {
